{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "02a052e2-c9aa-43f8-9ef1-da244ef4230a",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "PassThrough",
                    "id": "3ecd3b08-7203-4e45-a096-57ee2be7ee1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Horizontal",
                    "type": "PassThrough",
                    "id": "e0ba30ce-0c09-4fcd-9882-3874f39a935b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "04705791-9a42-4336-8b99-bc59ba990b06",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f87e1024-e2a8-4b07-b0f2-2759dc86d225",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "459e22b0-3b09-467e-a59b-63f195d8ba4a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "899fd9bb-97d8-4ea4-9ed7-ad4ab921c2be",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6b264bf2-d9f7-4a57-9a9c-ddc642bd5b54",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ca4aab07-e624-4645-83db-95070f437fbe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}